--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
         "@fortawesome/free-regular-svg-icons": "5.13.0",
         "@fortawesome/free-solid-svg-icons": "5.13.0",
         "@ng-bootstrap/ng-bootstrap": "6.0.2",
+        "@portis/web3": "^2.0.0-beta.55",
         "@prettier/plugin-pug": "1.2.0",
         "chart.js": "2.9.3",
+        "karma-angular": "0.0.6",
         "object-hash": "2.0.3",
         "rxjs": "6.5.5",
         "tslib": "1.11.1",
         "uuid": "7.0.3",
+        "web3": "^1.2.7",
         "webpack-bundle-analyzer": "3.6.1",
         "zone.js": "0.10.3"
     },
@@ -59,6 +62,9 @@
         "@types/node": "^12.11.1",
         "@types/object-hash": "1.3.1",
         "@types/uuid": "7.0.2",
+        "@babel/core": "7.2.0",
+        "@types/web3": "1.0.18",
+        "parcel-bundler": "^1.6.1",
         "bootstrap": "4.4.1",
         "chokidar": "3.3.1",
         "codelyzer": "5.2.2",
@@ -80,5 +86,6 @@
         "tslint": "6.1.1",
         "tslint-plugin-prettier": "2.3.0",
         "typescript": "3.8.3"
-    }
+    },
+    "keywords": []
 }
