--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~9.1.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@portis/web3": "^2.0.0-beta.55",
+    "ag-grid-angular": "^23.1.1",
+    "ag-grid-community": "^23.1.1",
     "bootstrap": "^4.4.1",
+    "devextreme-angular": "^20.1.3",
     "ethers": "^4.0.47",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
